--- a/style.css
+++ b/style.css
@@ -37,6 +37,16 @@ body {
   border-bottom: 1px solid var(--border-color);
 }
 
+/* Стиль для кнопки меню */
+.hamburger-menu {
+  display: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+  background: none;
+  border: none;
+  color: var(--primary-text);
+}
+
 .section_header {
   text-align: center;
   margin: 2rem 0;
@@ -59,7 +69,6 @@ header {
 nav {
   display: flex;
   align-items: center;
-  gap: 20px;
 }
 
 nav h2 {
@@ -230,6 +239,11 @@ footer .navigation {
 }
 
 @media (max-width: 768px) {
+
+  .hamburger-menu {
+    display: block;
+  }
+
   header {
     flex-direction: column;
     padding-bottom: 15px;
@@ -239,8 +253,36 @@ footer .navigation {
     margin-bottom: 10px;
   }
   
+  nav {
+    position: fixed;
+    top: 50px; /* высота хедера */
+    left: -100%; /* начально скрыто за пределами экрана */
+    width: 80%;
+    height: 100vh;
+    background-color: var(--tertiary-bg);
+    transition: left 0.3s ease;
+    z-index: 999;
+    padding: 20px;
+  }
+  
+  nav.active {
+    left: 0; /* показываем при активации */
+  }
+  
   .navigation {
-    gap: 15px;
+    flex-direction: column;
+    width: 100%;
+  }
+  
+  .navigation li {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  
+  .navigation a {
+    display: block;
+    padding: 10px;
+    font-size: 1.1rem;
   }
   
   .information {
